--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,6 +6,14 @@
     border-radius: 2px;
     background: white;
 }
+
+#_pendo-tag-assistant_ {
+    position:fixed;
+    top:0;
+    right:0;
+    z-index: 99999999;
+}
+
   body {
     font-family: "proxima-nova", Arial, sans-serif;
     font-size: 100%;
