fixed outline staying when extension leaves

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,6 +24,10 @@
     font-size: 11px;
 }
 
+._pendota-outline_ {
+    outline: 2px dashed #028cc2;
+}
+
 ._pendota-button_ {
     background-color: #229ca8;
     color: #fff;
