--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,6 +6,12 @@
     border-radius: 2px;
     background: white;
     padding: 20px;
+    margin: 0 auto;
+}
+
+#_pendota_header_div_ {
+    padding-top: 0px;
+    margin: 0 auto;
 }
 
 #_pendota-tag-assistant_ {
@@ -13,6 +19,7 @@
     top:0;
     right:0;
     z-index: 99999999;
+    margin: 0 auto;
 }
 
 #_pendota_status_ {
@@ -22,6 +29,7 @@
     overflow: hidden;
     max-width: 400px;
     font-size: 11px;
+    margin: 0 auto;
 }
 
 ._pendota-button_ {
@@ -40,37 +48,45 @@
     color: #fff;
 }
 
-._pendota_ h3 {
+h3._pendota_ {
     color: #ec2059;
     font-weight: 700;
     padding-left: 20px;
+    margin: 0 auto;
 }
 
-._pendota_ h5 {
+h5._pendota_  {
     font-weight: 700;
+    margin: 0 auto;
 }
 
 ._pendota_form-control_ {
-    border-radius: 2px;
-    padding: 2px;
+    border-radius: 5px;
+    padding: 5px;
     background-color: #eeeeee;
     width: 100%;
+    font-size: 12px;
+    margin: 0 auto;
 }
 
 ._pendota_row-header_ {
     padding-top: 10px;
+    margin: 0 auto;
 }
 
 ._pendota_input-row_ {
     padding-bottom: 10px;
+    margin: 0 auto;
 }
 
 #_pendota_target-img_ {
     width: 40px;
+    margin: 0 auto;
 }
 
 #_pendota_title_ {
     padding-bottom: 10px;
+    margin: 0 auto;
 }
 
 #_pendota_header-div_ {
