added copy to dynamic fields and changed bg color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -67,7 +67,7 @@ h5._pendota_  {
 ._pendota_form-control_ {
     border-radius: 5px;
     padding: 5px;
-    background-color: #eeeeee;
+    background-color: #efefef;
     width: 100%;
     font-size: 12px;
     margin: 0 auto;
