--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -9,12 +9,25 @@
     margin: 0 auto;
 }
 
+._pendota-drag-container_ {
+    display:block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 999999999;
+}
+
 #_pendota_header_div_ {
     padding-top: 0px;
     margin: 0 auto;
 }
 
 #_pendota-tag-assistant_ {
+    display: block;
     position:fixed;
     top:0;
     right:0;
