--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -11,7 +11,8 @@
     clear:none;
     color: #222222;
 	cursor:default;
-	float:none;
+    float:none;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 	font-size:medium;
 	font-style:normal;
 	font-weight:normal;
@@ -29,7 +30,8 @@
 	text-decoration:none;
 	text-indent:0;
 	text-transform:none;
-	top:auto;
+    top:auto;
+    vertical-align: middle;
 	visibility:visible;
     white-space:normal;
     padding: 0;
@@ -37,7 +39,8 @@
 }
 
 #_pendota-wrapper_ ._pendota_container_ {
-    max-height: 1200px;
+    max-height: 600px;
+    overflow-y: scroll;
     min-height: 500px;
     width: 440px;
     border: 2px solid rgba(0,0,0,0.3);
