--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,12 +39,16 @@
 #_pendota-wrapper_ ._pendota_container_ {
     max-height: 1200px;
     min-height: 500px;
+    max-width: 440px;
     width: 440px;
     border: 2px solid rgba(0,0,0,0.3);
     border-radius: 2px;
     background: white;
     padding: 10px 20px;
-    margin: 0 auto;
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;  
 }
 
 #_pendota-wrapper_ ._pendota-drag-container_ {
