--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,7 +14,8 @@
     bottom:auto;
     clear:none;
     color: #222222;
-	cursor:default;
+    cursor:default;
+    fill: none;
     float:none;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 	font-size:medium;
@@ -22,14 +23,16 @@
 	font-weight:normal;
 	left:auto;
 	letter-spacing:normal;
-	line-height:normal;
+    line-height:normal;
+    margin: 0;
 	max-height:none;
 	max-width:none;
 	min-height:0;
 	min-width:0;
-	overflow:visible;
+    overflow:visible;
+    padding: 0;
 	position:static;
-	right:auto;
+    right:auto;
 	text-align:left;
 	text-decoration:none;
 	text-indent:0;
@@ -38,8 +41,6 @@
     vertical-align: middle;
 	visibility:visible;
     white-space:normal;
-    padding: 0;
-    margin: 0;
 }
 
 #_pendota-wrapper_ ._pendota_container_ {
@@ -87,6 +88,7 @@
 #_pendota-wrapper_ ._pendota-feather-locked_ {
     height: 18px;
     width: 18px;
+    stroke: #222222;
 }
 
 #_pendota-wrapper_ ._pendota-feather-unlocked_ {
