--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,5 +1,8 @@
 
-._pendota-outline_ {
+._pendota-outline_,
+._pendota-outline_:hover,
+._pendota-outline_:visited,
+._pendota-outline_:active {
     outline: 2px dashed #028cc2;
 }
 
