--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -59,21 +59,10 @@
     background: white;
     padding: 10px 20px;
     margin: 0;
+    position: absolute;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;  
-}
-
-#_pendota-wrapper_ ._pendota-drag-container_ {
-    display:block;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 99999999999;
 }
 
 #_pendota-wrapper_ ._pendota-draggable_ {
@@ -107,7 +96,7 @@
     position:fixed;
     top:0;
     right:0;
-    z-index: 99999999;
+    z-index: 99999999999;
     margin: 0 auto;
 }
 
