--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -138,7 +138,7 @@
 #_pendota-wrapper_ h5._pendota_  {
     font-size: 16px;
     font-weight: 700;
-    margin: 0 auto;
+    display: inline-block;
     padding-bottom: 5px;
 }
 
@@ -154,6 +154,33 @@
 #_pendota-wrapper_ ._pendota_row-header_ {
     padding-top: 10px;
     margin: 0 auto;
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#_pendota-wrapper_ ._pendota-arrow-block_ {
+    padding-right: 35px;
+}
+
+#_pendota-wrapper_ ._pendota-parent-arrow_ {
+    height: 20px;
+}
+
+#_pendota-wrapper_ ._pendota-hide-arrow_ {
+    display: none;
+}
+
+#_pendota-wrapper_ ._pendota-active-arrow_,
+#_pendota-wrapper_ ._pendota-active-arrow_ * {
+    display: inline-block;
+    stroke: #222222;
+    cursor: pointer !important;
+}
+
+#_pendota-wrapper_ ._pendota-disabled-arrow_ {
+    display: inline-block;
+    stroke: #a9a9a9;
 }
 
 #_pendota-wrapper_ ._pendota_input-row_ {
@@ -173,4 +200,8 @@
 
 #_pendota-wrapper_ #_pendota_header-div_ {
     margin: 15px 0 15px;
+}
+
+#_pendota-wrapper_ ._pendota-copy-icon_ {
+    cursor: pointer;
 }
