set cursor to pointer on x button

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -200,6 +200,7 @@
 #_pendota-wrapper_ #_pendota_exit_img_container_ {
     width: 24px;
     margin: 0 auto;
+    cursor: pointer;
 }
 
 #_pendota-wrapper_ #_pendota_title_ {
