--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -43,7 +43,7 @@
 	text-indent:0;
 	text-transform:none;
     top:auto;
-    vertical-align: top;
+    vertical-align: middle;
 	visibility:visible;
     white-space:normal;
 }
@@ -52,8 +52,8 @@
     max-height: 600px;
     overflow-y: scroll;
     min-height: 500px;
-    max-width: 440px;
-    width: 440px;
+    max-width: 380px;
+    width: 380px;
     border: 2px solid rgba(0,0,0,0.3);
     border-radius: 2px;
     background: white;
@@ -102,13 +102,10 @@
 
 #_pendota-wrapper_ #_pendota_status_ {
     /* avoid an excessively wide status text */
-    white-space: pre;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    max-width: 400px;
     font-size: 11px;
     margin: 0 auto;
     padding-left: 5px;
+    padding-top: 5px; 
 }
 
 #_pendota-wrapper_ ._pendota-button_ {
@@ -184,7 +181,6 @@
 }
 
 #_pendota-wrapper_ ._pendota_input-row_ {
-    padding-bottom: 10px;
     margin: 0 auto;
 }
 
@@ -208,7 +204,7 @@
 }
 
 #_pendota-wrapper_ #_pendota_header-div_ {
-    margin: 15px 0 15px;
+    margin: 15px 0 5px;
 }
 
 #_pendota-wrapper_ ._pendota-copy-icon_ {
