--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -104,6 +104,7 @@
     /* avoid an excessively wide status text */
     font-size: 11px;
     margin: 0 auto;
+    min-height: 32px;
     padding-left: 5px;
     padding-top: 5px; 
 }
@@ -182,6 +183,7 @@
 
 #_pendota-wrapper_ ._pendota_input-row_ {
     margin: 0 auto;
+    padding-bottom: 5px;
 }
 
 #_pendota-wrapper_ #_pendota_target-img_ {
