--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -155,6 +155,30 @@
     margin: 0 auto;
 }
 
+#_pendota-wrapper_ #_pendota-sizzler_ {
+    background: #fff;
+    box-shadow: inset 0 0 5 px 5px #888;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin: 8px auto;
+}
+
+#_pendota-wrapper_ #_pendota-sizzler-icon_ {
+    background: #e7e7e7;
+    border: 1px solid #555;
+    border-radius: 4px;
+    font-size: 12px;
+    margin: 8px auto;
+    padding: 5px 8px;
+    text-align: center;
+    width: 100%;
+}
+
+#_pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked {
+    background: #555;
+    color: white;
+}
+
 #_pendota-wrapper_ ._pendota_row-header_ {
     padding-top: 10px;
     margin: 0 auto;
