--- a/src/ui/popup.css
+++ b/src/ui/popup.css
@@ -16,8 +16,9 @@ body {
 
 .popup-button {
 	background-color: var(--pendo-teal);
-	border-color: var(--pendo-teal);
+	border: 0;
 	border-radius: 3px;
+	box-shadow: none;
 	color: white;
 	cursor: pointer;
 	display: block;
@@ -25,6 +26,7 @@ body {
 	font-size: 14px;
 	font-weight: 600;
 	margin: 16px auto;
+	outline: 0;
 	padding: 8px 8px;
 	transition: 0.2s;
 	width: 220px;
