--- a/src/css/pendota_base.css
+++ b/src/css/pendota_base.css
@@ -4,5 +4,6 @@
 ._pendota-outline_:active,
 ._pendota-outline_::before,
 ._pendota-outline_::after {
+    box-shadow: inset 0 0 6px #028cc2;
     outline: 2px dashed #028cc2;
 }
