--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -1,10 +1,10 @@
 /* Reset css for all pendota elements */
-#_pendota-wrapper_,
-#_pendota-wrapper_ *,
-#_pendota-wrapper_ a:hover,
-#_pendota-wrapper_ a:visited,
-#_pendota-wrapper_ a:active,
-#_pendota-wrapper_ *:focus {
+._pendota-wrapper_,
+._pendota-wrapper_ *,
+._pendota-wrapper_ a:hover,
+._pendota-wrapper_ a:visited,
+._pendota-wrapper_ a:active,
+._pendota-wrapper_ *:focus {
     --pendo-teal: #128297;
     --pendo-dark-teal: #016479;
     --pendo-pink: #ec2059;
@@ -22,7 +22,7 @@
     fill: none;
     float:none;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-	font-size:medium;
+	font-size:inherit;
 	font-style:normal;
 	font-weight:normal;
 	left:auto;
@@ -47,16 +47,17 @@
     white-space:normal;
 }
 
-#_pendota-wrapper_ {
+._pendota-wrapper_ {
+    font-size: medium;
     position: fixed;
     z-index: 99999999999;
 }
 
-#_pendota-wrapper_ ._pendota-hidden_ {
+._pendota-wrapper_ ._pendota-hidden_ {
     display: none;
 }
 
-#_pendota-wrapper_ ._pendota_container_ {
+._pendota-wrapper_ ._pendota_container_ {
     max-height: 600px;
     overflow-y: auto;
     min-height: 450px;
@@ -73,36 +74,36 @@
     box-sizing: border-box;  
 }
 
-#_pendota-wrapper_ ._pendota-draggable_ {
+._pendota-wrapper_ ._pendota-draggable_ {
     touch-action: none;
     user-select: none;
 }
 
-#_pendota-wrapper_ #_pendota-lock-icon_ {
+._pendota-wrapper_ #_pendota-lock-icon_ {
     vertical-align: middle;
 }
 
-#_pendota-wrapper_ ._pendota-feather-locked_ {
+._pendota-wrapper_ ._pendota-feather-locked_ {
     height: 18px;
     width: 18px;
     stroke: var(--pendo-charcoal);
 }
 
-#_pendota-wrapper_ ._pendota-feather-locked_:hover {
+._pendota-wrapper_ ._pendota-feather-locked_:hover {
     stroke: var(--light-gray);
 }
 
-#_pendota-wrapper_ ._pendota-icon-locked_ * {
+._pendota-wrapper_ ._pendota-icon-locked_ * {
     cursor: pointer;
 }
 
-#_pendota-wrapper_ ._pendota-feather-unlocked_ {
+._pendota-wrapper_ ._pendota-feather-unlocked_ {
     height: 18px;
     width: 18px;
     stroke: #a9a9a9;
 }
 
-#_pendota-wrapper_ #_pendota-tag-assistant_ {
+._pendota-wrapper_ #_pendota-tag-assistant_ {
     display: block;
     position:fixed;
     top:15px;
@@ -111,7 +112,7 @@
     z-index: 99999999999;
 }
 
-#_pendota-wrapper_ #_pendota_status_ {
+._pendota-wrapper_ #_pendota_status_ {
     /* avoid an excessively wide status text */
     font-size: 12px;
     font-weight: 500;
@@ -121,7 +122,7 @@
     padding-top: 10px; 
 }
 
-#_pendota-wrapper_ ._pendota-button_ {
+._pendota-wrapper_ ._pendota-button_ {
     background-color: #229ca8;
     color: #fff;
     transition: 0.3s;
@@ -131,13 +132,13 @@
     font-size: 16px;
 }
 
-#_pendota-wrapper_ ._pendota-button_:hover {
+._pendota-wrapper_ ._pendota-button_:hover {
     background-color: #718098;
     border-color: #718098;
     color: #fff;
 }
 
-#_pendota-wrapper_ h3._pendota_ {
+._pendota-wrapper_ h3._pendota_ {
     color: #ec2059;
     font-weight: 700;
     font-size: 24px;
@@ -145,14 +146,14 @@
     margin: 0 auto;
 }
 
-#_pendota-wrapper_ h5._pendota_  {
+._pendota-wrapper_ h5._pendota_  {
     font-size: 16px;
     font-weight: 700;
     display: inline-block;
     padding-bottom: 5px;
 }
 
-#_pendota-wrapper_ ._pendota_form-control_ {
+._pendota-wrapper_ ._pendota_form-control_ {
     border-radius: 4px;
     padding: 5px;
     background-color: #efefef;
@@ -162,50 +163,80 @@
     height: 25px;
 }
 
-#_pendota-wrapper_ #_pendota-tag-builder-table_ {
+._pendota-wrapper_ #_pendota-tag-builder-table_ {
     border-collapse: separate;
     border-spacing: 0;
 }
 
-#_pendota-wrapper_ #_pendota-sizzler-count_ {
+._pendota-wrapper_ #_pendota-sizzler-count_ {
     font-size: 14px;
     color: #222222;
     line-height: 24px;
     text-align: center;
 }
 
-#_pendota-wrapper_ #_pendota-tag-builder-table_ td {
+._pendota-wrapper_ #_pendota-tag-builder-table_ td {
     vertical-align: top;
 }
 
-#_pendota-wrapper_ #_pendota-tag-builder_ {
+._pendota-wrapper_ #_pendota-tag-builder_ {
     border: 1px solid var(--pendo-teal);
     border-radius: 4px;
     min-height: 28px;
 }
 
-#_pendota-wrapper_ ._pendota-tag-elm_ {
+._pendota-wrapper_ ._pendota-tag-elm_ {
     background-color: var(--light-pink);
     border-radius: 4px;
     color: black;
     display: inline-block;
     font-size: 12px;
     margin: 2px;
-    max-width: 220px;
-    overflow: hidden;
-    padding: 2px 4px;
-    text-overflow: ellipsis;
+    padding: 0;
+}
+
+._pendota-wrapper_ ._pendota-tag-item_ {
+    color: black;
+    font-size: inherit;
+    display: inline-block;
+    position: relative;
+    transition: color ease-out 0.2s;
+    vertical-align: middle;
     white-space: nowrap;
 }
 
-#_pendota-wrapper_ #_pendota-sizzler_ {
+._pendota-wrapper_ ._pendota-tag-item_:hover {
+    color: var(--pendo-pink);
+}
+
+._pendota-wrapper_ ._pendota-tag-item-text_ {
+    color: inherit;
+    display: inline-block;
+    font-size: inherit;
+    max-width: 220px;
+    overflow: hidden;
+    padding: 4px 0;
+    text-overflow: ellipsis;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+._pendota-wrapper_ ._pendota-tag-item_:first-child ._pendota-tag-item-text_ {
+    padding-left: 4px;
+}
+
+._pendota-wrapper_ ._pendota-tag-item_:last-child ._pendota-tag-item-text_ {
+    padding-right: 4px;
+}
+
+._pendota-wrapper_ #_pendota-sizzler_ {
     background: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin: 8px auto;
 }
 
-#_pendota-wrapper_ #_pendota-sizzler-icon_ {
+._pendota-wrapper_ #_pendota-sizzler-icon_ {
     background: #e7e7e7;
     border: 1px solid #555;
     border-radius: 4px;
@@ -217,20 +248,20 @@
     width: 100%;
 }
 
-#_pendota-wrapper_ #_pendota-sizzler-icon_:hover {
+._pendota-wrapper_ #_pendota-sizzler-icon_:hover {
     background: #cacaca;
 }
 
-#_pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked {
+._pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked {
     background: #555;
     color: white;
 }
 
-#_pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked:hover {
+._pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked:hover {
     background: #777;
 }
 
-#_pendota-wrapper_ ._pendota_row-header_ {
+._pendota-wrapper_ ._pendota_row-header_ {
     padding-top: 10px;
     margin: 0 auto;
     padding-bottom: 5px;
@@ -238,52 +269,52 @@
     justify-content: space-between;
 }
 
-#_pendota-wrapper_ ._pendota-arrow-block_ {
+._pendota-wrapper_ ._pendota-arrow-block_ {
     padding-right: 35px;
 }
 
-#_pendota-wrapper_ ._pendota-parent-arrow_ {
+._pendota-wrapper_ ._pendota-parent-arrow_ {
     height: 20px;
 }
 
-#_pendota-wrapper_ ._pendota-hide-arrow_ {
+._pendota-wrapper_ ._pendota-hide-arrow_ {
     display: none;
 }
 
-#_pendota-wrapper_ ._pendota-active-arrow_,
-#_pendota-wrapper_ ._pendota-active-arrow_ * {
+._pendota-wrapper_ ._pendota-active-arrow_,
+._pendota-wrapper_ ._pendota-active-arrow_ * {
     display: inline-block;
     stroke: #222222;
     cursor: pointer !important;
 }
 
-#_pendota-wrapper_ ._pendota-disabled-arrow_ {
+._pendota-wrapper_ ._pendota-disabled-arrow_ {
     display: inline-block;
     stroke: #a9a9a9;
 }
 
-#_pendota-wrapper_ ._pendota_input-row_ {
+._pendota-wrapper_ ._pendota_input-row_ {
     margin: 0 auto;
     padding-bottom: 5px;
 }
 
-#_pendota-wrapper_ #_pendota_target-img_ {
+._pendota-wrapper_ #_pendota_target-img_ {
     width: 30px;
     margin: 0 auto;
 }
 
-#_pendota-wrapper_ #_pendota_exit_img_ {
+._pendota-wrapper_ #_pendota_exit_img_ {
     color: var(--light-gray);
     font-size: 36px;
     line-height: 0.5;
     stroke: var(--light-gray);
 }
 
-#_pendota-wrapper_ #_pendota_exit_img_:hover {
+._pendota-wrapper_ #_pendota_exit_img_:hover {
     color: var(--pendo-charcoal);
 } 
 
-#_pendota-wrapper_ #_pendota_exit_img_container_ {
+._pendota-wrapper_ #_pendota_exit_img_container_ {
     width: 24px;
     position: absolute;
     top: 12px;
@@ -292,26 +323,26 @@
     left: unset;
 }
 
-#_pendota-wrapper_ #_pendota_exit_img_,
-#_pendota-wrapper_ #_pendota_exit_img_ * {
+._pendota-wrapper_ #_pendota_exit_img_,
+._pendota-wrapper_ #_pendota_exit_img_ * {
     cursor: pointer;
 }
 
-#_pendota-wrapper_ #_pendota_title_ {
+._pendota-wrapper_ #_pendota_title_ {
     padding-bottom: 10px;
     margin: 0 auto;
 }
 
-#_pendota-wrapper_ #_pendota_header-div_ {
+._pendota-wrapper_ #_pendota_header-div_ {
     margin: 10px 15px 5px 0;
 }
 
-#_pendota-wrapper_ #_pendota_header-div_ table:nth-of-type(1) * {
+._pendota-wrapper_ #_pendota_header-div_ table:nth-of-type(1) * {
     cursor: move;
 }
 
-#_pendota-wrapper_ ._pendota-copy-icon_,
-#_pendota-wrapper_ ._pendota-addtobuild-icon_ {
+._pendota-wrapper_ ._pendota-copy-icon_,
+._pendota-wrapper_ ._pendota-addtobuild-icon_ {
     cursor: pointer;
     height: 20px;
 }
