--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -114,7 +114,7 @@
 
 ._pendota-wrapper_ #_pendota_status_ {
     /* avoid an excessively wide status text */
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 500;
     margin: auto;
     min-height: 32px;
@@ -227,6 +227,48 @@
 
 ._pendota-wrapper_ ._pendota-tag-item_:last-child ._pendota-tag-item-text_ {
     padding-right: 4px;
+}
+
+._pendota-wrapper_ ._pendota-tag-item-dropdown_ {
+    background-color: #f1f1f1;
+    border: 1px solid var(--light-gray);
+    border-radius: 4px;
+    display: none;
+    position: absolute;
+    min-width: 75px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+._pendota-wrapper_ ._pendota-dropdown-show_ {
+    display: block;
+}
+
+._pendota-wrapper_ ._pendota-tag-item-dd-item_ {
+    color: black;
+    padding: 4px 8px;
+    text-decoration: none;
+    display: block;
+}
+
+._pendota-wrapper_ ._pendota-tag-item-dd-item_:first-child {
+    border-radius: 4px 4px 0 0;
+} 
+
+._pendota-wrapper_ ._pendota-tag-item-dd-item_:last-child {
+    border-radius: 0 0 4px 4px;
+} 
+
+._pendota-wrapper_ ._pendota-tag-item-dd-item_:only-child {
+    border-radius: 4px;
+} 
+
+._pendota-wrapper_ ._pendota-tag-item-dd-item_:hover {
+    background-color: var(--light-gray);
+    color: black;
+    padding: 4px 8px;
+    text-decoration: none;
+    display: block;
 }
 
 ._pendota-wrapper_ #_pendota-sizzler_ {
