3 new rules working in tag builder

--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -1,9 +1,6 @@
 /* Reset css for all pendota elements */
 ._pendota-wrapper_,
 ._pendota-wrapper_ *,
-._pendota-wrapper_ a:hover,
-._pendota-wrapper_ a:visited,
-._pendota-wrapper_ a:active,
 ._pendota-wrapper_ *:focus {
     --pendo-teal: #128297;
     --pendo-dark-teal: #016479;
@@ -109,12 +106,13 @@
     top:15px;
     right:15px;
     margin: 0 auto;
+    overflow: visible;
     z-index: 99999999999;
 }
 
 ._pendota-wrapper_ #_pendota_status_ {
     /* avoid an excessively wide status text */
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 500;
     margin: auto;
     min-height: 32px;
@@ -163,6 +161,11 @@
     height: 25px;
 }
 
+._pendota-wrapper_ ._pendota_form-group_ {
+    max-height: 200px;
+    overflow: auto;
+}
+
 ._pendota-wrapper_ #_pendota-tag-builder-table_ {
     border-collapse: separate;
     border-spacing: 0;
@@ -171,7 +174,7 @@
 ._pendota-wrapper_ #_pendota-sizzler-count_ {
     font-size: 14px;
     color: #222222;
-    line-height: 24px;
+    line-height: 27px;
     text-align: center;
 }
 
@@ -182,7 +185,15 @@
 ._pendota-wrapper_ #_pendota-tag-builder_ {
     border: 1px solid var(--pendo-teal);
     border-radius: 4px;
+    font-size: 12px;
     min-height: 28px;
+    padding-bottom: 4px;
+}
+
+._pendota-wrapper_ #_pendota-tag-builder-placeholder_ {
+    line-height: 23px;
+    margin-top: 4px;
+    padding-left: 4px;
 }
 
 ._pendota-wrapper_ ._pendota-tag-elm_ {
@@ -191,7 +202,7 @@
     color: black;
     display: inline-block;
     font-size: 12px;
-    margin: 2px;
+    margin: 4px 2px 0;
     padding: 0;
 }
 
@@ -230,18 +241,15 @@
 }
 
 ._pendota-wrapper_ ._pendota-tag-item-dropdown_ {
-    background-color: #f1f1f1;
+    background-color: white;
     border: 1px solid var(--light-gray);
     border-radius: 4px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     display: none;
     position: absolute;
     min-width: 75px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    overflow: visible;
     z-index: 1;
-}
-
-._pendota-wrapper_ ._pendota-dropdown-show_ {
-    display: block;
 }
 
 ._pendota-wrapper_ ._pendota-tag-item-dd-item_ {
@@ -249,6 +257,9 @@
     padding: 4px 8px;
     text-decoration: none;
     display: block;
+    overflow: visible;
+    position: relative;
+    white-space: nowrap;
 }
 
 ._pendota-wrapper_ ._pendota-tag-item-dd-item_:first-child {
@@ -264,11 +275,43 @@
 } 
 
 ._pendota-wrapper_ ._pendota-tag-item-dd-item_:hover {
-    background-color: var(--light-gray);
+    background-color: #f1f1f1;
     color: black;
     padding: 4px 8px;
     text-decoration: none;
     display: block;
+}
+
+._pendota-wrapper_ ._pendota-tag-item-dd-inp-div_ {
+    background-color: white;
+    border-top: 1px solid var(--light-gray);
+    border-right: 1px solid var(--light-gray);
+    border-bottom: 1px solid var(--light-gray);
+    border-radius: 0 4px 4px 0;
+    display: none;
+    position: absolute;
+    left: 99%;
+    min-width: 100px;
+    top: -4px;
+    white-space: nowrap;
+}
+
+._pendota-wrapper_ ._pendota-tag-item-dd-inp_ {
+    background-color: white;
+    border-radius: 4px;
+    display: inline-block;
+    min-width: 40px;
+    margin: 6px;
+    padding: 2px 4px;
+}
+
+._pendota-wrapper_ ._pendota-tag-item-dd-inp-submit_ {
+    background-color: var(--pendo-teal);
+    border-radius: 4px;
+    color: white;
+    display: inline-block;
+    margin: 6px;
+    padding: 2px 4px;
 }
 
 ._pendota-wrapper_ #_pendota-sizzler_ {
@@ -283,9 +326,10 @@
     border: 1px solid #555;
     border-radius: 4px;
     cursor: pointer;
+    display: block;
     font-size: 12px;
-    margin: 8px auto;
-    padding: 5px 8px;
+    line-height: 27px;
+    margin: 0 auto;
     text-align: center;
     width: 100%;
 }
@@ -387,4 +431,7 @@
 ._pendota-wrapper_ ._pendota-addtobuild-icon_ {
     cursor: pointer;
     height: 20px;
+}
+._pendota-wrapper_ ._pendota-dropdown-show_ {
+    display: block;
 }
