--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -3,7 +3,9 @@
 ._pendota-wrapper_ *,
 ._pendota-wrapper_ *:focus,
 ._pendota-wrapper_ *:hover,
-._pendota-wrapper_ *:visited {
+._pendota-wrapper_ *:visited,
+._pendota-wrapper_ a,
+._pendota-wrapper_ input {
 	--pendo-teal: #128297;
 	--pendo-dark-teal: #016479;
 	--pendo-pink: #ec2059;
