--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -214,7 +214,6 @@
 	border-radius: 4px;
 	font-size: 12px;
 	min-height: 65px;
-	padding-bottom: 4px;
 }
 
 ._pendota-wrapper_ ._pendota-button_ {
@@ -255,7 +254,7 @@
 	color: black;
 	display: inline-block;
 	font-size: 12px;
-	margin: 4px 2px 0;
+	margin: 2px;
 	padding: 0 4px;
 }
 
@@ -362,7 +361,7 @@
 	border: 1px solid var(--pendo-charcoal);
 	border-radius: 4px;
 	display: inline-block;
-	height: 24px;
+	min-height: 40px;
 	min-width: 200px;
 	margin: 4px;
 	padding: 6px 4px;
@@ -382,7 +381,7 @@
 	border: 1px solid #ccc;
 	border-radius: 4px;
     margin: 0 auto;
-    min-height: 56px;
+    min-height: 63px;
 }
 
 ._pendota-wrapper_ #_pendota-sizzler-icon_._pendota-clicked_ {
