fixed error causing lock listeners to stay active

--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -524,6 +524,11 @@
 	padding-right: 35px;
 } */
 
+._pendota-wrapper_ #_pendota-parent-up_, 
+._pendota-wrapper_ #_pendota-parent-down_ {
+	vertical-align: baseline;
+}
+
 ._pendota-wrapper_ ._pendota-parent-arrow_ {
 	height: 20px;
 }
