--- a/src/css/pendota_ui.css
+++ b/src/css/pendota_ui.css
@@ -157,7 +157,7 @@
 ._pendota-wrapper_ #_pendota-status_ {
 	margin: 0 auto;
 	min-height: 36px;
-	width: fit-content;
+	width: 100%;
 }
 
 ._pendota-wrapper_ #_pendota_lock-message_ {
@@ -167,9 +167,9 @@
 	font-weight: 500;
 	margin: auto;
 	min-height: 32px;
-	padding-left: 5px;
 	padding-top: 10px;
 	text-align: center;
+	width: 100%;
 }
 
 ._pendota-wrapper_ h3._pendota_ {
@@ -414,7 +414,7 @@
 	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 	display: none;
 	position: absolute;
-	min-width: 75px;
+	min-width: 85px;
     overflow: visible;
     z-index: 10000;
 }
@@ -422,14 +422,15 @@
 ._pendota-wrapper_ ._pendota-tag-item-dd-item_ {
 	background-color: white;
 	color: black;
+	display: block;
 	line-height: 32px;
 	padding-left: 8px;
 	padding-right: 14px;
-	text-decoration: none;
-	display: block;
-	overflow: visible;
 	position: relative;
+	text-decoration: none;
+	overflow: visible;
 	white-space: nowrap;
+	min-width: 95px;
 }
 
 ._pendota-wrapper_ ._pendota-tag-item-dd-item_:hover {
@@ -471,6 +472,7 @@
 	border-right: 1px solid var(--light-gray);
 	border-bottom: 1px solid var(--light-gray);
 	border-radius: 0 4px 4px 0;
+	box-shadow: 12px 8px 16px 0px rgba(0, 0, 0, 0.1);
 	display: none;
 	position: absolute;
 	left: 100%;
@@ -504,7 +506,9 @@
 	border: 1px solid #ccc;
 	border-radius: 3px;
 	line-height: 1.5rem;
-    margin: 0 auto;
+	margin: 0 auto;
+	max-width: 226px;
+	min-width: 226px;
     min-height: 63px;
 }
 
